--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -9,7 +9,7 @@ File: Framework CSS
 */
 
 html{overflow-y:scroll;}
-body{margin:0; padding:0; font-size:14px; line-height:1.4em;}
+body{margin:0; padding:0; font-size:16px; line-height:1.4em;}
 
 .bold{font-weight:bold;}
 .center{text-align:center;}
@@ -48,8 +48,8 @@ label{margin-bottom:5px;}
 
 /* Generalise
 --------------------------------------------------------------------------------------------------------------- */
-h1, h2, h3, h4, h5, h6, .heading{display:block; margin:0 0 20px 0; font-size:16px; line-height:normal; font-weight:normal; font-style:normal;}
-
+h1, h2, h3, h4, h5, h6, .heading{display:block; margin:0 0 20px 0; font-size:20px; line-height:normal; font-weight:bold; font-style:normal;color:#e68a00;}
+h1{font-size:30px;color:#e68a00;}
 address{font-style:normal; font-weight:normal;}
 hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
 
