--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -48,8 +48,12 @@ label{margin-bottom:5px;}
 
 /* Generalise
 --------------------------------------------------------------------------------------------------------------- */
-h1, h2, h3, h4, h5, h6, .heading{display:block; margin:0 0 20px 0; font-size:20px; line-height:normal; font-weight:bold; font-style:normal;color:#e68a00;}
+h1, h2, h3, h4, h5, h6, .heading{display:block; margin:0 0 20px 0; font-size:16px; line-height:normal; font-weight:bold; font-style:normal;color:#004d00;}
 h1{font-size:30px;color:#e68a00;}
+h2{font-size:26px;color:#004d00;}
+h3{font-size:24px;color:#004d00;}
+h4{font-size:18px;color:#004d00;}
+h5, h6 {font-size:16px;color:#004d00;}
 address{font-style:normal; font-weight:normal;}
 hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
 
